--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerPlate') %>
+<% layout('layouts/boilerplate') %>
 
 <div class="container d-flex justify-content-center align-items-center mt-5">
     <div class="row">
